@@ -37,11 +37,11 @@ import io.confluent.idesidecar.restapi.models.ConnectionStatus.Authentication.St
 import io.confluent.idesidecar.restapi.models.ConnectionStatus.ConnectedState;
 import io.confluent.idesidecar.restapi.models.ConnectionsList;
 import io.confluent.idesidecar.restapi.models.ObjectMetadata;
-import io.confluent.idesidecar.restapi.util.CCloudTestUtil.AccessToken;
-import io.confluent.idesidecar.restapi.util.UuidFactory;
 import io.confluent.idesidecar.restapi.testutil.NoAccessFilterProfile;
 import io.confluent.idesidecar.restapi.testutil.QueryResourceUtil;
 import io.confluent.idesidecar.restapi.util.CCloudTestUtil;
+import io.confluent.idesidecar.restapi.util.CCloudTestUtil.AccessToken;
+import io.confluent.idesidecar.restapi.util.UuidFactory;
 import io.quarkiverse.wiremock.devservice.ConnectWireMock;
 import io.quarkus.test.InjectMock;
 import io.quarkus.test.common.http.TestHTTPEndpoint;
@@ -253,7 +253,8 @@ public class ConnectionsResourceTest {
           .body("kind", equalTo("Connection"))
           .body("metadata.self", startsWith("http://localhost:26637/gateway/v1/connections/"))
           .body("metadata.resource_name", nullValue())
-          .body("metadata.sign_in_uri", startsWith("https://login.confluent.io/oauth/authorize?response_type=code&code_challenge_method="))
+          .body("metadata.sign_in_uri", startsWith(
+              "https://login.confluent.io/oauth/authorize?response_type=code&code_challenge_method="))
           .body("id", equalTo(requestSpec.id()))
           .body("spec.id", equalTo(requestSpec.id()))
           .body("spec.name", equalTo(requestSpec.name()))
@@ -277,7 +278,7 @@ public class ConnectionsResourceTest {
   @Test
   @TestHTTPEndpoint(ConnectionsResource.class)
   void getConnection_withoutToken_shouldReturnWithStatus() {
-    List<ConnectionSpec> specs = Arrays.asList(
+    List<ConnectionSpec> specs = List.of(
         new ConnectionSpec("c-1", "Connection 1", ConnectionType.CCLOUD)
     );
 
@@ -504,7 +505,8 @@ public class ConnectionsResourceTest {
         .statusCode(400);
     assertResponseMatches(
         response,
-        createError().withSource("name").withDetail("Connection name is required and may not be blank")
+        createError().withSource("name")
+            .withDetail("Connection name is required and may not be blank")
     );
   }
 
@@ -572,7 +574,8 @@ public class ConnectionsResourceTest {
         .statusCode(400);
     assertResponseMatches(
         response,
-        createError().withSource("ccloud_config").withDetail("CCloud configuration is not allowed when type is LOCAL")
+        createError().withSource("ccloud_config")
+            .withDetail("CCloud configuration is not allowed when type is LOCAL")
     );
 
     // Assert that the connection spec is unchanged
@@ -797,106 +800,108 @@ public class ConnectionsResourceTest {
         String displayName,
         String specJson,
         Error... expectedErrors
-    ) {}
+    ) {
+
+    }
     var inputs = List.of(
         // Local connections
         new TestInput(
             "Local spec is valid with name but no config",
             """
-            {
-              "name": "Some connection name",
-              "type": "LOCAL"
-            }
-            """
+                {
+                  "name": "Some connection name",
+                  "type": "LOCAL"
+                }
+                """
         ),
         new TestInput(
             "Local spec is valid with empty local config",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "local_config": {
-              }
-            }
-            """
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "local_config": {
+                  }
+                }
+                """
         ),
         new TestInput(
             "Local spec is valid with valid Schema Registry URI",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "local_config": {
-                "schema-registry-uri": "http://localhost:8081"
-              }
-            }
-            """
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "local_config": {
+                    "schema-registry-uri": "http://localhost:8081"
+                  }
+                }
+                """
         ),
         new TestInput(
             "Local spec is valid with new Schema Registry config but without credentials",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "schema_registry": {
-                "uri": "http://localhost:8081"
-              }
-            }
-            """
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "schema_registry": {
+                    "uri": "http://localhost:8081"
+                  }
+                }
+                """
         ),
         new TestInput(
             "Local spec is valid with new Schema Registry config and null credentials",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "schema_registry": {
-                "uri": "http://localhost:8081",
-                "credentials": null
-              }
-            }
-            """
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "schema_registry": {
+                    "uri": "http://localhost:8081",
+                    "credentials": null
+                  }
+                }
+                """
         ),
         new TestInput(
             "Local spec is valid with new Schema Registry config including basic credentials",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "schema_registry": {
-                "uri": "http://localhost:8081",
-                "credentials": {
-                  "username": "user",
-                  "password": "pass"
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "schema_registry": {
+                    "uri": "http://localhost:8081",
+                    "credentials": {
+                      "username": "user",
+                      "password": "pass"
+                    }
+                  }
                 }
-              }
-            }
-            """
+                """
         ),
         new TestInput(
             "Local spec is valid with new Schema Registry config including API key and secret credentials",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "schema_registry": {
-                "uri": "http://localhost:8081",
-                "credentials": {
-                  "api_key": "my-api-key",
-                  "api_secret": "my-api-secret"
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "schema_registry": {
+                    "uri": "http://localhost:8081",
+                    "credentials": {
+                      "api_key": "my-api-key",
+                      "api_secret": "my-api-secret"
+                    }
+                  }
                 }
-              }
-            }
-            """
+                """
         ),
         new TestInput(
             "Local spec is invalid without name",
             """
-            {
-              "type": "LOCAL",
-              "local_config": {}
-            }
-            """,
+                {
+                  "type": "LOCAL",
+                  "local_config": {}
+                }
+                """,
             createError()
                 .withSource("name")
                 .withDetail("Connection name is required and may not be blank")
@@ -904,12 +909,12 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with blank name",
             """
-            {
-              "name": "  ",
-              "type": "LOCAL",
-              "local_config": {}
-            }
-            """,
+                {
+                  "name": "  ",
+                  "type": "LOCAL",
+                  "local_config": {}
+                }
+                """,
             createError()
                 .withSource("name")
                 .withDetail("Connection name is required and may not be blank")
@@ -917,29 +922,30 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with blank Schema Registry URI (old config)",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "local_config": {
-                "schema-registry-uri": "  "
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "local_config": {
+                    "schema-registry-uri": "  "
+                  }
+                }
+                """,
             createError()
                 .withSource("local_config.schema-registry-uri")
-                .withDetail("Schema Registry URI may be null (use default local SR) or empty (do not use SR), but may not have only whitespace")
+                .withDetail(
+                    "Schema Registry URI may be null (use default local SR) or empty (do not use SR), but may not have only whitespace")
         ),
         new TestInput(
             "Local spec is invalid with null Schema Registry URI (new config)",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "schema_registry": {
-                "uri": null
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "schema_registry": {
+                    "uri": null
+                  }
+                }
+                """,
             createError()
                 .withSource("schema_registry.uri")
                 .withDetail("Schema Registry URI is required and may not be blank")
@@ -949,14 +955,14 @@ public class ConnectionsResourceTest {
             // If the URI is null, then we assume the user wants to use SR at the default local port
             "Local spec is invalid with blank Schema Registry URI (new config)",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "schema_registry": {
-                "uri": "   "
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "schema_registry": {
+                    "uri": "   "
+                  }
+                }
+                """,
             createError()
                 .withSource("schema_registry.uri")
                 .withDetail("Schema Registry URI is required and may not be blank")
@@ -964,14 +970,14 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with null Schema Registry URI",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "schema_registry": {
-                "uri": null
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "schema_registry": {
+                    "uri": null
+                  }
+                }
+                """,
             createError()
                 .withSource("schema_registry.uri")
                 .withDetail("Schema Registry URI is required and may not be blank")
@@ -979,17 +985,17 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with both local config and Schema Registry",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "local_config": {
-                "schema-registry-uri": "http://localhost:8081"
-              },
-              "schema_registry": {
-                "uri": "http://localhost:8081"
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "local_config": {
+                    "schema-registry-uri": "http://localhost:8081"
+                  },
+                  "schema_registry": {
+                    "uri": "http://localhost:8081"
+                  }
+                }
+                """,
             createError()
                 .withSource("local_config.schema-registry-uri")
                 .withDetail("Local config cannot be used with schema_registry configuration")
@@ -997,17 +1003,17 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with new Schema Registry config and incomplete basic credentials",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "schema_registry": {
-                "uri": "http://localhost:8081",
-                "credentials": {
-                  "username": "user"
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "schema_registry": {
+                    "uri": "http://localhost:8081",
+                    "credentials": {
+                      "username": "user"
+                    }
+                  }
                 }
-              }
-            }
-            """,
+                """,
             createError()
                 .withSource("schema_registry.credentials.password")
                 .withDetail("Schema Registry password is required")
@@ -1015,14 +1021,14 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with malformed Schema Registry URI (old config)",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "local_config": {
-                "schema-registry-uri": "this-is-not a valid URI"
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "local_config": {
+                    "schema-registry-uri": "this-is-not a valid URI"
+                  }
+                }
+                """,
             createError()
                 .withSource("local_config.schema-registry-uri")
                 .withDetail("Schema Registry URI is not a valid URI")
@@ -1030,14 +1036,14 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with malformed Schema Registry URI (new config)",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "schema_registry": {
-                "uri": "this-is-not a valid URI"
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "schema_registry": {
+                    "uri": "this-is-not a valid URI"
+                  }
+                }
+                """,
             createError()
                 .withSource("schema_registry.uri")
                 .withDetail("Schema Registry URI is not a valid URI")
@@ -1045,14 +1051,14 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with file Schema Registry URI (old config)",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "local_config": {
-                "schema-registry-uri": "file://path/to/non/existent/file.txt"
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "local_config": {
+                    "schema-registry-uri": "file://path/to/non/existent/file.txt"
+                  }
+                }
+                """,
             createError()
                 .withSource("local_config.schema-registry-uri")
                 .withDetail("Schema Registry URI must use 'http' or 'https'")
@@ -1060,14 +1066,14 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with file Schema Registry URI (new config)",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "schema_registry": {
-                "uri": "file://path/to/non/existent/file.txt"
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "schema_registry": {
+                    "uri": "file://path/to/non/existent/file.txt"
+                  }
+                }
+                """,
             createError()
                 .withSource("schema_registry.uri")
                 .withDetail("Schema Registry URI must use 'http' or 'https'")
@@ -1075,14 +1081,14 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with CCloud spec",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "ccloud_config": {
-                "organization_id": "this-wont-work"
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "ccloud_config": {
+                    "organization_id": "this-wont-work"
+                  }
+                }
+                """,
             createError()
                 .withSource("ccloud_config")
                 .withDetail("CCloud configuration is not allowed when type is LOCAL")
@@ -1090,13 +1096,13 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with Kafka spec",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "kafka_cluster": {
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "kafka_cluster": {
+                  }
+                }
+                """,
             createError()
                 .withSource("kafka_cluster")
                 .withDetail("Kafka cluster configuration is not allowed when type is LOCAL")
@@ -1106,58 +1112,58 @@ public class ConnectionsResourceTest {
         new TestInput(
             "CCloud spec is valid with name and no config",
             """
-            {
-              "name": "Some connection name",
-              "type": "CCLOUD"
-            }
-            """
+                {
+                  "name": "Some connection name",
+                  "type": "CCLOUD"
+                }
+                """
         ),
         new TestInput(
             "CCloud spec is valid with name and CCloud config w/ null organization",
             """
-            {
-              "name": "Some connection name",
-              "type": "CCLOUD",
-              "ccloud_config": {
-                "organization_id": null
-              }
-            }
-            """
+                {
+                  "name": "Some connection name",
+                  "type": "CCLOUD",
+                  "ccloud_config": {
+                    "organization_id": null
+                  }
+                }
+                """
         ),
         new TestInput(
             "CCloud spec is valid with name and CCloud config w/ blank organization",
             """
-            {
-              "name": "Some connection name",
-              "type": "CCLOUD",
-              "ccloud_config": {
-                "organization_id": ""
-              }
-            }
-            """
+                {
+                  "name": "Some connection name",
+                  "type": "CCLOUD",
+                  "ccloud_config": {
+                    "organization_id": ""
+                  }
+                }
+                """
         ),
         new TestInput(
             "CCloud spec is valid with name and CCloud config w/ organization",
             """
-            {
-              "name": "Some connection name",
-              "type": "CCLOUD",
-              "ccloud_config": {
-                "organization_id": "12345"
-              }
-            }
-            """
+                {
+                  "name": "Some connection name",
+                  "type": "CCLOUD",
+                  "ccloud_config": {
+                    "organization_id": "12345"
+                  }
+                }
+                """
         ),
         new TestInput(
             "CCloud spec is invalid without name",
             """
-            {
-              "type": "CCLOUD",
-              "ccloud_config": {
-                "organization_id": "12345"
-              }
-            }
-            """,
+                {
+                  "type": "CCLOUD",
+                  "ccloud_config": {
+                    "organization_id": "12345"
+                  }
+                }
+                """,
             createError()
                 .withSource("name")
                 .withDetail("Connection name is required and may not be blank")
@@ -1165,14 +1171,14 @@ public class ConnectionsResourceTest {
         new TestInput(
             "CCloud spec is invalid with blank name",
             """
-            {
-              "name": "  ",
-              "type": "CCLOUD",
-              "ccloud_config": {
-                "organization_id": "12345"
-              }
-            }
-            """,
+                {
+                  "name": "  ",
+                  "type": "CCLOUD",
+                  "ccloud_config": {
+                    "organization_id": "12345"
+                  }
+                }
+                """,
             createError()
                 .withSource("name")
                 .withDetail("Connection name is required and may not be blank")
@@ -1180,13 +1186,13 @@ public class ConnectionsResourceTest {
         new TestInput(
             "CCloud spec is invalid with local config",
             """
-            {
-              "name": "Connection 1",
-              "type": "CCLOUD",
-              "local_config": {
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "CCLOUD",
+                  "local_config": {
+                  }
+                }
+                """,
             createError()
                 .withSource("local_config")
                 .withDetail("Local configuration is not allowed when type is CCLOUD")
@@ -1194,13 +1200,13 @@ public class ConnectionsResourceTest {
         new TestInput(
             "CCloud spec is invalid with Kafka spec",
             """
-            {
-              "name": "Connection 1",
-              "type": "CCLOUD",
-              "kafka_cluster": {
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "CCLOUD",
+                  "kafka_cluster": {
+                  }
+                }
+                """,
             createError()
                 .withSource("kafka_cluster")
                 .withDetail("Kafka cluster configuration is not allowed when type is CCLOUD")
@@ -1208,93 +1214,93 @@ public class ConnectionsResourceTest {
         new TestInput(
             "CCloud spec is invalid with Schema Registry spec",
             """
-            {
-              "name": "Connection 1",
-              "type": "CCLOUD",
-              "schema_registry": {
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "CCLOUD",
+                  "schema_registry": {
+                  }
+                }
+                """,
             createError()
                 .withSource("schema_registry")
-                .withDetail( "Schema Registry configuration is not allowed when type is CCLOUD")
+                .withDetail("Schema Registry configuration is not allowed when type is CCLOUD")
         ),
 
         // Direct connections
         new TestInput(
             "Direct spec is valid with name and no config",
             """
-            {
-              "name": "Some connection name",
-              "type": "DIRECT"
-            }
-            """
+                {
+                  "name": "Some connection name",
+                  "type": "DIRECT"
+                }
+                """
         ),
         new TestInput(
             "Direct spec is valid with name and Kafka and no Schema Registry",
             """
-            {
-              "name": "Some connection name",
-              "type": "DIRECT",
-              "kafka_cluster": {
-                "bootstrap_servers": "localhost:9092"
-              }
-            }
-            """
+                {
+                  "name": "Some connection name",
+                  "type": "DIRECT",
+                  "kafka_cluster": {
+                    "bootstrap_servers": "localhost:9092"
+                  }
+                }
+                """
         ),
         new TestInput(
             "Direct spec is valid with name and Kafka w/ basic credentials and no Schema Registry",
             """
-            {
-              "name": "Some connection name",
-              "type": "DIRECT",
-              "kafka_cluster": {
-                "bootstrap_servers": "localhost:9092",
-                "credentials": {
-                  "username": "user",
-                  "password": "pass"
+                {
+                  "name": "Some connection name",
+                  "type": "DIRECT",
+                  "kafka_cluster": {
+                    "bootstrap_servers": "localhost:9092",
+                    "credentials": {
+                      "username": "user",
+                      "password": "pass"
+                    }
+                  }
                 }
-              }
-            }
-            """
+                """
         ),
         new TestInput(
             "Direct spec is valid with name and Schema Registry and no Kafka",
             """
-            {
-              "name": "Some connection name",
-              "type": "DIRECT",
-              "schema_registry": {
-                "uri": "http://localhost:8081"
-              }
-            }
-            """
+                {
+                  "name": "Some connection name",
+                  "type": "DIRECT",
+                  "schema_registry": {
+                    "uri": "http://localhost:8081"
+                  }
+                }
+                """
         ),
         new TestInput(
             "Direct spec is valid with name and Kafka and Schema Registry",
             """
-            {
-              "name": "Some connection name",
-              "type": "DIRECT",
-              "kafka_cluster": {
-                "bootstrap_servers": "localhost:9092"
-              },
-              "schema_registry": {
-                "uri": "http://localhost:8081"
-              }
-            }
-            """
+                {
+                  "name": "Some connection name",
+                  "type": "DIRECT",
+                  "kafka_cluster": {
+                    "bootstrap_servers": "localhost:9092"
+                  },
+                  "schema_registry": {
+                    "uri": "http://localhost:8081"
+                  }
+                }
+                """
         ),
         new TestInput(
             "Direct spec is invalid without name",
             """
-            {
-              "type": "DIRECT",
-              "kafka_cluster": {
-                "bootstrap_servers": null
-              }
-            }
-            """,
+                {
+                  "type": "DIRECT",
+                  "kafka_cluster": {
+                    "bootstrap_servers": null
+                  }
+                }
+                """,
             createError()
                 .withSource("name")
                 .withDetail("Connection name is required and may not be blank"),
@@ -1305,14 +1311,14 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Direct spec is invalid with blank name",
             """
-            {
-              "name": "  ",
-              "type": "DIRECT",
-              "kafka_cluster": {
-                "bootstrap_servers": null
-              }
-            }
-            """,
+                {
+                  "name": "  ",
+                  "type": "DIRECT",
+                  "kafka_cluster": {
+                    "bootstrap_servers": null
+                  }
+                }
+                """,
             createError()
                 .withSource("name")
                 .withDetail("Connection name is required and may not be blank"),
@@ -1323,13 +1329,13 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Direct spec is invalid with local config",
             """
-            {
-              "name": "Connection 1",
-              "type": "DIRECT",
-              "local_config": {
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "DIRECT",
+                  "local_config": {
+                  }
+                }
+                """,
             createError()
                 .withSource("local_config")
                 .withDetail("Local configuration is not allowed when type is DIRECT")
@@ -1337,14 +1343,14 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Direct spec is invalid with Kafka spec",
             """
-            {
-              "name": "Connection 1",
-              "type": "DIRECT",
-              "ccloud_config": {
-                "organization_id": ""
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "DIRECT",
+                  "ccloud_config": {
+                    "organization_id": ""
+                  }
+                }
+                """,
             createError()
                 .withSource("ccloud_config")
                 .withDetail("CCloud configuration is not allowed when type is DIRECT")
@@ -1354,20 +1360,20 @@ public class ConnectionsResourceTest {
         new TestInput(
             "Local spec is invalid with Kafka spec, SR spec, and CCloud spec",
             """
-            {
-              "name": "Connection 1",
-              "type": "LOCAL",
-              "ccloud_config": {
-                "organization_id": ""
-              },
-              "kafka_cluster": {
-                "bootstrap_servers": null
-              },
-              "schema_registry": {
-                "uri": null
-              }
-            }
-            """,
+                {
+                  "name": "Connection 1",
+                  "type": "LOCAL",
+                  "ccloud_config": {
+                    "organization_id": ""
+                  },
+                  "kafka_cluster": {
+                    "bootstrap_servers": null
+                  },
+                  "schema_registry": {
+                    "uri": null
+                  }
+                }
+                """,
             createError()
                 .withSource("ccloud_config")
                 .withDetail("CCloud configuration is not allowed when type is LOCAL"),
@@ -1423,7 +1429,9 @@ public class ConnectionsResourceTest {
         ConnectionSpec initialSpec,
         ConnectionSpec updatedSpec,
         Error... expectedErrors
-    ) {}
+    ) {
+
+    }
     final ConnectionSpec validLocalSpec = ConnectionSpec.createLocal("c1", "Connection 1", null);
     var inputs = List.of(
         // Local configs
@@ -1486,20 +1494,23 @@ public class ConnectionsResourceTest {
             "Updated of local config is invalid without name",
             validLocalSpec,
             validLocalSpec.withName(null),
-            createError().withSource("name").withDetail("Connection name is required and may not be blank")
+            createError().withSource("name")
+                .withDetail("Connection name is required and may not be blank")
         ),
         new TestInput(
             "Updated of local config is invalid with blank name",
             validLocalSpec,
             validLocalSpec.withName("  "),
-            createError().withSource("name").withDetail("Connection name is required and may not be blank")
+            createError().withSource("name")
+                .withDetail("Connection name is required and may not be blank")
         ),
         new TestInput(
             "Updated of local config is invalid with both local and CCloud config",
             validLocalSpec,
             validLocalSpec
                 .withCCloudOrganizationId("12345"),
-            createError().withSource("ccloud_config").withDetail("CCloud configuration is not allowed when type is LOCAL")
+            createError().withSource("ccloud_config")
+                .withDetail("CCloud configuration is not allowed when type is LOCAL")
         ),
         new TestInput(
             "Updated of local config is invalid with CCloud config",
@@ -1507,7 +1518,8 @@ public class ConnectionsResourceTest {
             validLocalSpec
                 .withoutLocalConfig()
                 .withCCloudOrganizationId("12345"),
-            createError().withSource("ccloud_config").withDetail("CCloud configuration is not allowed when type is LOCAL")
+            createError().withSource("ccloud_config")
+                .withDetail("CCloud configuration is not allowed when type is LOCAL")
         )
     );
     return inputs
@@ -1524,7 +1536,8 @@ public class ConnectionsResourceTest {
               var createdSpec = ccloudTestUtil.createConnection(input.initialSpec());
 
               // Assert that the connection spec can be read
-              assertEquals(createdSpec, connectionStateManager.getConnectionSpec(input.initialSpec.id()));
+              assertEquals(createdSpec,
+                  connectionStateManager.getConnectionSpec(input.initialSpec.id()));
 
               // Attempt to update the connection with the invalid spec
               var response = given()
@@ -1537,16 +1550,18 @@ public class ConnectionsResourceTest {
               var success = assertResponseMatches(response, input.expectedErrors);
               if (success) {
                 // The connection spec should have changed
-                assertEquals(input.updatedSpec, connectionStateManager.getConnectionSpec(input.initialSpec.id()));
+                assertEquals(input.updatedSpec,
+                    connectionStateManager.getConnectionSpec(input.initialSpec.id()));
               } else {
                 // The connection spec should not have changed
-                assertEquals(input.initialSpec, connectionStateManager.getConnectionSpec(input.initialSpec.id()));
+                assertEquals(input.initialSpec,
+                    connectionStateManager.getConnectionSpec(input.initialSpec.id()));
               }
             }
         ));
   }
 
-  boolean assertResponseMatches(ValidatableResponse response, Error...expectedErrors) {
+  boolean assertResponseMatches(ValidatableResponse response, Error... expectedErrors) {
     if (expectedErrors.length == 0) {
       response.statusCode(200);
       response.body("status", is(notNullValue()));
@@ -1572,8 +1587,8 @@ public class ConnectionsResourceTest {
   }
 
   /**
-   * Update the connection with a new CCloud organization ID, returns
-   * the refreshed tokens after updating the connection with the new organization ID.
+   * Update the connection with a new CCloud organization ID, returns the refreshed tokens after
+   * updating the connection with the new organization ID.
    */
   private AccessToken updateCCloudOrganization(
       AccessToken accessTokens,
@@ -1842,10 +1857,10 @@ public class ConnectionsResourceTest {
    * the test <code>fail()</code> if the {@link VertxTestContext} has failed.
    *
    * @param connectionId The ID of the connection
-   * @param testContext The {@link VertxTestContext} instance used for executing the
-   *                    {@link ExecutionBlock}
-   * @param block The {@link ExecutionBlock} that should be executed after completing the status
-   *              refresh
+   * @param testContext  The {@link VertxTestContext} instance used for executing the
+   *                     {@link ExecutionBlock}
+   * @param block        The {@link ExecutionBlock} that should be executed after completing the
+   *                     status refresh
    */
   void refreshConnectionStatusAndThen(
       String connectionId,
